--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "^10.0.1",
-    "eslint-config-next": "^0.2.4",
     "next": "^16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,7 +22,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "eslint": "^10.0.1",
+    "eslint-config-next": "^16.1.6",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^29.4.3"
+  },
+  "overrides": {
+    "minimatch": "^10.2.1"
   }
 }
