--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "next": "^16.1.6",
+    "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
@@ -22,9 +22,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "eslint": "^10.0.1",
-    "eslint-config-next": "^16.1.6",
-    "jest": "^30.2.0",
+    "eslint": "^8.35.0",
+    "eslint-config-next": "13.1.6",
+    "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3"
   },
   "overrides": {
